# iot_service

./: .gitattributes  .gitignore  WORKSPACE.bazel
iot-service-java/: pom.xml
iot-service-java/src/main/resources/: grpc.conf
iot-service-rs/: BUILD.bazel  Cargo.toml  cargo-bazel-lock.json
iot-service-rs/backend/: BUILD.bazel
iot-service-rs/backend/proto/: BUILD.bazel
iot-service-rs/backend/src/: http_server.rs  main.rs  registration_projection.rs  temperature.rs  temperature_production.rs  udp_server.rs
iot-service-rs/frontend/: index.html
iot-service-rs/model/: BUILD.bazel
iot-service-rs/model/src/: temperature.rs
iot-service-scala/: README.md  build.sbt
