workspace(name = "iot_service_repo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    integrity = "sha256-F8U7+AC5MvMtPKGdLLnorVM84cDXKfDRgwd7/dq3rUY=",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.46.0/rules_rust-v0.46.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = ["1.70.0"],
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "crate_index",
    cargo_config = "//iot-service-rs:.cargo/config.toml",
    cargo_lockfile = "//iot-service-rs:Cargo.lock",
    lockfile = "//iot-service-rs:cargo-bazel-lock.json",
    manifests = [
        "//iot-service-rs:Cargo.toml",
        "//iot-service-rs:backend/Cargo.toml",
        "//iot-service-rs:frontend/Cargo.toml",
        "//iot-service-rs:model/Cargo.toml",
    ],
    rust_version = "1.70.0",
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()
