load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "iot_service_model",
    srcs = glob(["src/*.rs"]),
    edition = "2021",
    deps = all_crate_deps(normal = True),
)
